feat: 重构T7。
